syntax = "proto3";

package flock;

service Flock {
    rpc Flock (stream FlockRequest) returns (stream FlockResponse);
}

message FlockRequest {
    oneof value {
        Ping ping = 1;
        Batch batch = 2;
        EndStream end = 3;
    }
}

message FlockResponse {
    oneof value {
        Pong pong = 1;
        BatchInsertResponse batch = 2;
    }
}

message Ping {
}

message Pong {
}

message Batch {
    string BatchId = 1;
    oneof value {
        BatchInsertHead head = 2;
        DataStream chunk = 3;
        BatchInsertTail tail = 4;
    }
}

message EndStream {
}

message BatchInsertHead {
    string tableName = 2;
    int64 chunks = 3;
}

message DataStream {
    int64 index = 1;
    bytes data = 2;
}

message BatchInsertTail {
}

message BatchInsertResponse {
    bool success = 1;
}